--- a/app/views/application/_monitor.html.erb
+++ b/app/views/application/_monitor.html.erb
@@ -6,8 +6,8 @@
 	</p>
 	<p>
 		<% if current_user %>
-			Signed in as <%= current_user.first_name %> <%= current_user.last_name %> | <%= link_to "Logout", '/logout' %><br>
-			Current user id 
+			Signed in as '<%= current_user.first_name %> <%= current_user.last_name %>' | <%= link_to "Logout", '/logout' %><br>
+			Current user id: <%= current_user.id %>
 		<% else %>
 			Not signed in!
 			<%= link_to "Login", '/login' %> | <%= link_to "Signup", new_user_path %> 
