--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,12 +7,16 @@
 		<th>Name</th>
 		<th>#Holes</th>
 		<th>Par</th>
+		<th>Action</th>
 	</tr>
 	<% @courses.each do |course| %>
 		<tr>
 			<td><%= course.course_name %></td>
 			<td><%= course.holes %></td>
 			<td><%= course.par %></td>
+			<td><%= link_to "Delete", course_path(course),
+					method: :delete,
+					data: { confirm: "Are you sure?" } %></td>
 		</tr>
 	<% end %>
 
