--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,4 +6,4 @@
 <%= link_to 'log in', login_path %><br>
 <%= link_to 'sign_up', new_user_path %><br>
 <%= link_to 'courses', courses_path %><br>
-<%= link_to 'create_course', new_course_path %><br>
+<%= link_to 'scores', scores_path %><br>
