--- a/app/views/scores/initialize_score_details.js.erb
+++ b/app/views/scores/initialize_score_details.js.erb
@@ -1,4 +1,4 @@
-<% if params[:course_name].blank? %>
+<% if params[:course_id].blank? %>
 	
 	var f = document.querySelector('#details-wrapper');
 	while (f.firstChild) {
